[251112] gitignore 왜 적용 안됨..

--- a/test.ipynb
+++ b/test.ipynb
@@ -561,6 +561,373 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 객관식 문제 변형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import os, json\n",
+    "ONEDRIVE_PATH = os.path.join(os.path.expanduser(\"~\"), \"Library/CloudStorage/OneDrive-개인/데이터L/selectstar\")\n",
+    "EXAM_DIR = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/4_multiple_exam')\n",
+    "\n",
+    "for exams in os.listdir(EXAM_DIR):\n",
+    "    if exams == \"1st\":\n",
+    "        first_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                first_exam += json.load(f)\n",
+    "    elif exams == \"2nd\":\n",
+    "        second_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                second_exam += json.load(f)\n",
+    "    elif exams == \"3rd\":\n",
+    "        third_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                third_exam += json.load(f)\n",
+    "    elif exams == \"4th\":\n",
+    "        fourth_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                fourth_exam += json.load(f)\n",
+    "    elif exams == \"5th\":\n",
+    "        fifth_exam = []\n",
+    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
+    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
+    "                fifth_exam += json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4957 241 4716\n"
+     ]
+    }
+   ],
+   "source": [
+    "ct = 0\n",
+    "\n",
+    "for m in multiple:\n",
+    "    if m['explanation'] == \"\":\n",
+    "        ct += 1\n",
+    "\n",
+    "print(len(multiple), ct, len(multiple) - ct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전체: 4957\n",
+      "옳은 것은? (단일 선택): 1963\n",
+      "옳지 않은 것은? (단일 선택): 2672\n",
+      "옳은 것을 모두 고른 것은? (다중 선택): 322\n",
+      "갯수 일치 여부: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiple = first_exam + second_exam + third_exam + fourth_exam + fifth_exam\n",
+    "\n",
+    "pick_right = []\n",
+    "pick_wrong = []\n",
+    "pick_abcd = []\n",
+    "\n",
+    "# 리스트를 순회하면서 remove()를 하면 인덱스가 꼬이므로, 새로 분류하는 방식으로 변경\n",
+    "# remaining = []\n",
+    "for m in multiple:\n",
+    "    question = m['question']\n",
+    "    \n",
+    "    # 3. ㄱ/ㄴ/ㄷ/ㄹ 등에서 옳은 것을 모두 고르는 문제 (다중 선택)\n",
+    "    # 종결어미 '다.' 제외: 줄바꿈, 문장 시작, 또는 공백 후에 나오고 뒤에 공백이 아닌 문자가 오는 경우만 매칭\n",
+    "    # 가나다라마바사아자차카타파하까지 포함 (바, 사, 아 등도 포함)\n",
+    "    if  ('보기' in question) or \\\n",
+    "        ('옳은 것을 모두 고른 것은?' in question) or \\\n",
+    "         ('옳은 것을 모두 고르면?' in question) or \\\n",
+    "         ('옳은 것을 모두 고른 것은' in question) or \\\n",
+    "         ('옳은 것을 모두' in question and '?' in question) or \\\n",
+    "         ('모두 고른 것은?' in question) or \\\n",
+    "         ('모두 고르면?' in question) or \\\n",
+    "         ('모두 고른 것은' in question) or \\\n",
+    "         ('모두 묶인 것은?' in question) or \\\n",
+    "         (re.search(r'[ㄱㄴㄷㄹ][\\.]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
+    "         (re.search(r'(?:^|\\n| )[가나다라마바사아자차카타파하]\\.(?!\\s|$)', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
+    "         (re.search(r'[㉠㉡㉢㉣㉤]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
+    "         (re.search(r'[ⓐⓑⓒⓓⓔ]', question) and ('모두 고른' in question or '모두 묶인' in question)):\n",
+    "        pick_abcd.append(m)\n",
+    "    # 1. 옳은 것을 고르는 문제 (단일 선택)\n",
+    "    # if ('옳은' in question) or ('옳게' in question) or ('해당하는' in question) or ('적절한' in question) or ('적절하게' in question) or ('바르게' in question) or ('올바른' in question) or ('가장 깊은' in question) or ('가장 타당한' in question) or ('관련 있는' in question):\n",
+    "    #     pick_right.append(m)\n",
+    "    # 2. 옳지 않은 것을 고르는 문제 (단일 선택)\n",
+    "    elif ('않은' in question) or ('못한' in question) or ('없는' in question) or ('거리가 먼' in question) or ('아닌' in question) or ('아니하는 것' in question) or ('않는' in question) or (\"않게\" in question) or ('잘못된' in question) or ('틀린' in question) or ('다른' in question) or ('무관한' in question) or ('가장 먼' in question) or ('어려운' in question):\n",
+    "        pick_wrong.append(m)\n",
+    "    else:\n",
+    "        # 분류되지 않은 항목\n",
+    "        # remaining.append(m)\n",
+    "        pick_right.append(m)\n",
+    "\n",
+    "# 분류 결과 확인\n",
+    "print(f\"전체: {len(multiple)}\")\n",
+    "print(f\"옳은 것은? (단일 선택): {len(pick_right)}\")\n",
+    "print(f\"옳지 않은 것은? (단일 선택): {len(pick_wrong)}\")\n",
+    "print(f\"옳은 것을 모두 고른 것은? (다중 선택): {len(pick_abcd)}\")\n",
+    "# print(f\"미분류: {len(remaining)}\")\n",
+    "print(f\"갯수 일치 여부: {len(pick_right) + len(pick_wrong) + len(pick_abcd) == len(multiple)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 옳지 않은 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "당신은 15년 경력의 문제 출제 경험이 뛰어난 전문가입니다.\n",
+    "다음 문제는 옳지 않은 것을 고르는 문제이고, 옳은 것을 고르는 문제로 변형해야 합니다.\n",
+    "주어진 답과 해설을 보고 답을 옳은 선택지로 변형하세요.\n",
+    "이때 변형은 정답인 선택지의 단어를 바꿔 최소화하는 것입니다. (ex. 높은 -> 낮은, 없다 -> 있다)\n",
+    "\n",
+    "### 출력형식\n",
+    "[ {\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}, \n",
+    "{\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}\n",
+    "]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.seed(42)\n",
+    "user_prompt = ''\n",
+    "\n",
+    "to_json = []\n",
+    "\n",
+    "\n",
+    "for i, p in enumerate(random.sample(pick_wrong, 30)):\n",
+    "    question_id = p['file_id'] + '_' + p['tag']\n",
+    "    question = p['question']\n",
+    "    options = p['options']\n",
+    "    answer = p['answer']\n",
+    "    explanation = p['explanation']\n",
+    "\n",
+    "    single_user_prompt = f\"\"\"문제번호: {question_id}\n",
+    "문제: {question}\n",
+    "선택지: {options}\n",
+    "답: {answer}\n",
+    "해설: {explanation}\n",
+    "=====================\n",
+    "\"\"\"\n",
+    "    to_json.append(\n",
+    "        {\n",
+    "            \"question_id\": question_id,\n",
+    "            \"question\": question,\n",
+    "            \"options\": options,\n",
+    "            \"answer\": answer,\n",
+    "            \"explanation\": explanation\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    user_prompt += single_user_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ONEDRIVE_PATH = os.path.join(os.path.expanduser(\"~\"), \"Library/CloudStorage/OneDrive-개인/데이터L/selectstar\")\n",
+    "BASE_DIR = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/5_multiple_rw')\n",
+    "\n",
+    "with open(os.path.join(BASE_DIR, 'wrong','multiple_1wrong.json'), 'w', encoding='utf-8') as f:\n",
+    "    json.dump(to_json, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.QueryModels import query_openrouter\n",
+    "from tools.evaluation import qna_subdomain_classifier\n",
+    "\n",
+    "classifier = qna_subdomain_classifier.QnASubdomainClassifier()\n",
+    "\n",
+    "# for model_path in ['anthropic/claude-sonnet-4.5', 'openai/o3', 'google/gemini-2.5-pro']:\n",
+    "for model_path in ['openai/gpt-5']:\n",
+    "    model_name = model_path.split('/')[-1]\n",
+    "    company = model_path.split('/')[0]\n",
+    "\n",
+    "    response = query_openrouter(system_prompt, user_prompt, model_name=model_path)\n",
+    "    response = classifier.parse_api_response(response)\n",
+    "    \n",
+    "    with open(os.path.join(BASE_DIR, 'wrong', f'multiple_5right_{model_name}.json'), 'w', encoding='utf-8') as f:\n",
+    "        json.dump(response, f, ensure_ascii=False, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 이제 전부 옳은 것임! -> 전부 옳지 않은 것으로 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "당신은 문제 출제 경험이 뛰어난 전문가입니다.\n",
+    "다음 문제는 선택지가 모두 옳은 것으로, 모두 옳지 않은 선지로 변형해야 합니다.\n",
+    "주어진 선택지들과 해설을 보고, 문장의 역/이/대우를 활용하여 옳지 않은 선택지로 변형하세요.\n",
+    "이때 변형은 선택지의 단어를 바꿔 할루시네이션을 최소화해야 합니다. (ex. 높은 -> 낮은, 없다 -> 있다)\n",
+    "\n",
+    "### 출력형식\n",
+    "[ {\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}, \n",
+    "{\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}\n",
+    "]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "from tools.QueryModels import query_openrouter\n",
+    "from tools.evaluation import qna_subdomain_classifier\n",
+    "\n",
+    "classifier = qna_subdomain_classifier.QnASubdomainClassifier()\n",
+    "\n",
+    "for model_path in ['google/gemini-2.5-pro', 'openai/gpt-5','anthropic/claude-sonnet-4.5', 'openai/o3']:\n",
+    "    model_name = model_path.split('/')[-1]\n",
+    "    company = model_path.split('/')[0]\n",
+    "\n",
+    "    user_prompt = ''\n",
+    "    with open(os.path.join(BASE_DIR, 'wrong', f'multiple_5right_{model_name}.json'), 'r', encoding='utf-8') as f:\n",
+    "        multiple_wrong = json.load(f)\n",
+    "\n",
+    "    for i, p in enumerate(multiple_wrong):\n",
+    "        question_id = p['question_id']\n",
+    "        question = p['question']\n",
+    "        options = p['options']\n",
+    "        answer = p['answer']\n",
+    "        explanation = p['explanation']\n",
+    "\n",
+    "        single_user_prompt = f\"\"\"문제번호: {question_id}\n",
+    "    문제: {question}\n",
+    "    선택지: {options}\n",
+    "    답: {answer}\n",
+    "    해설: {explanation}\n",
+    "    =====================\n",
+    "    \"\"\"\n",
+    "\n",
+    "        user_prompt += single_user_prompt\n",
+    "\n",
+    "    response = query_openrouter(system_prompt, user_prompt, model_name=model_path)\n",
+    "    response = classifier.parse_api_response(response)\n",
+    "    \n",
+    "    with open(os.path.join(BASE_DIR, 'wrong', f'multiple_5wrong_{model_name}.json'), 'w', encoding='utf-8') as f:\n",
+    "        json.dump(response, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 옳은 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new = []\n",
+    "for p in pick_right[:10]:\n",
+    "    new.append(\n",
+    "        {\n",
+    "            \"question_id\": p['file_id'] + '_' + p['tag'],\n",
+    "            \"question\": p['question'],\n",
+    "            \"options\": p['options'],\n",
+    "            \"answer\": p['answer'],\n",
+    "            \"explanation\": p['explanation']\n",
+    "        }\n",
+    "    )\n",
+    "with open('multiple_right.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(new, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -600,98 +967,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## evaluation 파일 수정하고 다시 돌리기"
+    "### evaluation 파일 수정하고 다시 돌리기"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import os, json\n",
-    "ONEDRIVE_PATH = os.path.join(os.path.expanduser(\"~\"), \"Library/CloudStorage/OneDrive-개인/데이터L/selectstar\")\n",
-    "EXAM_DIR = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/4_multiple_exam')\n",
-    "\n",
-    "for exams in os.listdir(EXAM_DIR):\n",
-    "    if exams == \"1st\":\n",
-    "        first_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                first_exam += json.load(f)\n",
-    "    elif exams == \"2nd\":\n",
-    "        second_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                second_exam += json.load(f)\n",
-    "    elif exams == \"3rd\":\n",
-    "        third_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                third_exam += json.load(f)\n",
-    "    elif exams == \"4th\":\n",
-    "        fourth_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                fourth_exam += json.load(f)\n",
-    "    elif exams == \"5th\":\n",
-    "        fifth_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                fifth_exam += json.load(f)\n",
-    "\n",
-    "multiple = first_exam + second_exam + third_exam + fourth_exam + fifth_exam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpt5pro = \"\"\"SS0087_q_0293_0001\n",
-    "SS0087_q_0483_0001\n",
-    "SS0118_q_0210_0004\n",
-    "SS0182_q_0083_0001\n",
-    "SS0207_q_0182_0002\n",
-    "SS0209_q_0115_0001\n",
-    "SS0215_q_0056_0001\n",
-    "SS0224_q_0023_0001\n",
-    "SS0244_q_0563_0001\n",
-    "SS0249_q_0216_0001\n",
-    "SS0249_q_0307_0004\n",
-    "SS0251_q_0375_0003\n",
-    "SS0260_q_0214_0001\n",
-    "SS03015_q_0115_0002\n",
-    "SS0318_q_0290_0001\n",
-    "SS0394_q_0056_0001\n",
-    "SS0397_q_0045_0001\n",
-    "SS0397_q_0096_0002\n",
-    "SS0419_q_0008_0001\n",
-    "SS0421_q_0317_0002\"\"\"\n",
-    "\n",
-    "new_json = []\n",
-    "for q in gpt5pro.split('\\n'):\n",
-    "    for m in first_exam:\n",
-    "        if m['file_id']+\"_\"+m['tag'] == q:\n",
-    "            # print(m)\n",
-    "            new_json.append(m)\n",
-    "\n",
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/gpt5pro_new.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(new_json, f, ensure_ascii=False, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Excel 파일 업데이트 완료: /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gpt-5-pro.xlsx\n"
+      "✅ Excel 파일 업데이트 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx\n"
      ]
     }
    ],
@@ -703,8 +991,8 @@
     "import ast\n",
     "\n",
     "# Excel 파일 경로 설정\n",
-    "excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gpt-5-pro.xlsx'\n",
-    "# excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
+    "# excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_Qwen3-32B.xlsx'\n",
+    "excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
     "\n",
     "# Excel 파일 읽기\n",
     "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
