[251114] oci 나머지 결과 및 코드 수정

--- a/test.ipynb
+++ b/test.ipynb
@@ -605,14 +605,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "import os, json\n",
     "ONEDRIVE_PATH = os.path.join(os.path.expanduser(\"~\"), \"Library/CloudStorage/OneDrive-개인/데이터L/selectstar\")\n",
-    "EXAM_DIR = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/4_multiple_exam')\n",
+    "# EXAM_DIR = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/4_multiple_exam')\n",
+    "EXAM_DIR = os.path.join(os.path.expanduser(\"~\"), '4_multiple_exam')\n",
     "\n",
     "for exams in os.listdir(EXAM_DIR):\n",
     "    if exams == \"1st\":\n",
@@ -646,55 +647,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpt5pro = \"\"\"SS0087_q_0293_0001\n",
-    "SS0087_q_0483_0001\n",
-    "SS0118_q_0210_0004\n",
-    "SS0182_q_0083_0001\n",
-    "SS0207_q_0182_0002\n",
-    "SS0209_q_0115_0001\n",
-    "SS0215_q_0056_0001\n",
-    "SS0224_q_0023_0001\n",
-    "SS0244_q_0563_0001\n",
-    "SS0249_q_0216_0001\n",
-    "SS0249_q_0307_0004\n",
-    "SS0251_q_0375_0003\n",
-    "SS0260_q_0214_0001\n",
-    "SS03015_q_0115_0002\n",
-    "SS0318_q_0290_0001\n",
-    "SS0394_q_0056_0001\n",
-    "SS0397_q_0045_0001\n",
-    "SS0397_q_0096_0002\n",
-    "SS0419_q_0008_0001\n",
-    "SS0421_q_0317_0002\"\"\"\n",
-    "\n",
+    "import pandas as pd\n",
+    "model_name = 'gpt-oss-120b'\n",
+    "excel_path = f'/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/2nd/2nd_evaluation_{model_name}.xlsx'\n",
+    "print(excel_path)\n",
+    "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_ids = pred_wide[pred_wide[pred_wide.columns[-1]].isna()].id.tolist()\n",
+    "print(empty_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "new_json = []\n",
-    "for q in gpt5pro.split('\\n'):\n",
-    "    for m in first_exam:\n",
+    "for q in empty_ids:\n",
+    "    for m in second_exam:\n",
     "        if m['file_id']+\"_\"+m['tag'] == q:\n",
     "            # print(m)\n",
     "            new_json.append(m)\n",
     "\n",
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/gpt5pro_new.json', 'w', encoding='utf-8') as f:\n",
+    "print(len(new_json) == len(empty_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/home/yjmoon/model_new.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(new_json, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Excel 파일 업데이트 완료: /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gpt-5-pro.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
     "import pandas as pd\n",
@@ -703,7 +707,7 @@
     "import ast\n",
     "\n",
     "# Excel 파일 경로 설정\n",
-    "excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gpt-5-pro.xlsx'\n",
+    "# excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gpt-5-pro.xlsx'\n",
     "# excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
     "\n",
     "# Excel 파일 읽기\n",
@@ -860,7 +864,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "eval",
    "language": "python",
    "name": "python3"
   },
@@ -874,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
