[251114] gpt-oss 결과

--- a/test.ipynb
+++ b/test.ipynb
@@ -653,7 +653,7 @@
    "source": [
     "import pandas as pd\n",
     "model_name = 'gpt-oss-120b'\n",
-    "excel_path = f'/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/2nd/2nd_evaluation_{model_name}.xlsx'\n",
+    "excel_path = f'/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/5th/5th_evaluation_{model_name}.xlsx'\n",
     "print(excel_path)\n",
     "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')"
    ]
@@ -676,7 +676,7 @@
    "source": [
     "new_json = []\n",
     "for q in empty_ids:\n",
-    "    for m in second_exam:\n",
+    "    for m in fifth_exam:\n",
     "        if m['file_id']+\"_\"+m['tag'] == q:\n",
     "            # print(m)\n",
     "            new_json.append(m)\n",
@@ -707,8 +707,7 @@
     "import ast\n",
     "\n",
     "# Excel 파일 경로 설정\n",
-    "# excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gpt-5-pro.xlsx'\n",
-    "# excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
+    "# excel_path = f'/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/3rd/3rd_evaluation_gpt-oss-120b.xlsx'\n",
     "\n",
     "# Excel 파일 읽기\n",
     "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
