[251115] 문제 변형 코드 업데이트

--- a/multiple_answer_옳>않.ipynb
+++ b/multiple_answer_옳>않.ipynb
@@ -10,108 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9deda92b",
+   "execution_count": 5,
+   "id": "459d795a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "import os, json\n",
-    "ONEDRIVE_PATH = os.path.join(os.path.expanduser(\"~\"), \"Library/CloudStorage/OneDrive-개인/데이터L/selectstar\")\n",
-    "EXAM_DIR = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/4_multiple_exam')\n",
+    "from tools.pipeline.config import ONEDRIVE_PATH\n",
     "\n",
-    "for exams in os.listdir(EXAM_DIR):\n",
-    "    if exams == \"1st\":\n",
-    "        first_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                first_exam += json.load(f)\n",
-    "    elif exams == \"2nd\":\n",
-    "        second_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                second_exam += json.load(f)\n",
-    "    elif exams == \"3rd\":\n",
-    "        third_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                third_exam += json.load(f)\n",
-    "    elif exams == \"4th\":\n",
-    "        fourth_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                fourth_exam += json.load(f)\n",
-    "    elif exams == \"5th\":\n",
-    "        fifth_exam = []\n",
-    "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
-    "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
-    "                fifth_exam += json.load(f)\n",
-    "\n",
-    "multiple = first_exam + second_exam + third_exam + fourth_exam + fifth_exam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "36ee8d5c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "전체: 4957\n",
-      "옳은 것은? (단일 선택): 1947\n",
-      "옳지 않은 것은? (단일 선택): 2661\n",
-      "옳은 것을 모두 고른 것은? (다중 선택): 349\n",
-      "갯수 일치 여부: True\n"
-     ]
-    }
-   ],
-   "source": [
-    "pick_right = []\n",
-    "pick_wrong = []\n",
-    "pick_abcd = []\n",
-    "\n",
-    "# 리스트를 순회하면서 remove()를 하면 인덱스가 꼬이므로, 새로 분류하는 방식으로 변경\n",
-    "# remaining = []\n",
-    "for m in multiple:\n",
-    "    question = m['question']\n",
-    "    \n",
-    "    # 3. ㄱ/ㄴ/ㄷ/ㄹ 등에서 옳은 것을 모두 고르는 문제 (다중 선택)\n",
-    "    # 종결어미 '다.' 제외: 줄바꿈, 문장 시작, 또는 공백 후에 나오고 뒤에 공백이 아닌 문자가 오는 경우만 매칭\n",
-    "    # 가나다라마바사아자차카타파하까지 포함 (바, 사, 아 등도 포함)\n",
-    "    if  ('보기' in question) or \\\n",
-    "         ('모두 선택한' in question) or \\\n",
-    "         ('모두 고른' in question) or \\\n",
-    "         ('모두 고르면' in question) or \\\n",
-    "         ('모두 묶인' in question) or \\\n",
-    "         ('모두 묶으면' in question) or \\\n",
-    "         ('묶여진 것은' in question) or \\\n",
-    "         (re.search(r'[ㄱㄴㄷㄹ][\\.]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
-    "         (re.search(r'(?:^|\\n| )[가나다라마바사아자차카타파하]\\.(?!\\s|$)', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
-    "         (re.search(r'[㉠㉡㉢㉣㉤]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
-    "         (re.search(r'[ⓐⓑⓒⓓⓔ]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
-    "         (re.search(r'[㉮㉯㉰㉱㉲]', question) and ('모두 고른' in question or '모두 묶인' in question or \"묶여진 것은\" in question)):\n",
-    "        pick_abcd.append(m)\n",
-    "    # 1. 옳은 것을 고르는 문제 (단일 선택)\n",
-    "    # if ('옳은' in question) or ('옳게' in question) or ('해당하는' in question) or ('적절한' in question) or ('적절하게' in question) or ('바르게' in question) or ('올바른' in question) or ('가장 깊은' in question) or ('가장 타당한' in question) or ('관련 있는' in question):\n",
-    "    #     pick_right.append(m)\n",
-    "    # 2. 옳지 않은 것을 고르는 문제 (단일 선택)\n",
-    "    elif ('않은' in question) or ('못한' in question) or ('없는' in question) or ('거리가 먼' in question) or ('아닌' in question) or ('아니하는 것' in question) or ('않는' in question) or (\"않게\" in question) or ('잘못된' in question) or ('틀린' in question) or ('다른' in question) or ('무관한' in question) or ('가장 먼' in question) or ('어려운' in question):\n",
-    "        pick_wrong.append(m)\n",
-    "    else:\n",
-    "        # 분류되지 않은 항목\n",
-    "        # remaining.append(m)\n",
-    "        pick_right.append(m)\n",
-    "\n",
-    "# 분류 결과 확인\n",
-    "print(f\"전체: {len(multiple)}\")\n",
-    "print(f\"옳은 것은? (단일 선택): {len(pick_right)}\")\n",
-    "print(f\"옳지 않은 것은? (단일 선택): {len(pick_wrong)}\")\n",
-    "print(f\"옳은 것을 모두 고른 것은? (다중 선택): {len(pick_abcd)}\")\n",
-    "# print(f\"미분류: {len(remaining)}\")\n",
-    "print(f\"갯수 일치 여부: {len(pick_right) + len(pick_wrong) + len(pick_abcd) == len(multiple)}\")"
+    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/multiple_classify.json'), 'r', encoding='utf-8') as f:\n",
+    "    multiple = json.load(f)"
    ]
   },
   {
@@ -133,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b5998561",
    "metadata": {},
    "outputs": [
@@ -141,15 +49,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4지선다 문제 수: 1081\n",
-      "{2: 360, 3: 361, 4: 360}\n",
-      "5지선다 문제 수: 866\n",
-      "{2: 216, 3: 216, 4: 217, 5: 216}\n",
+      "4지선다 문제 수: 1230\n",
+      "{2: 410, 3: 410, 4: 410}\n",
+      "5지선다 문제 수: 1031\n",
+      "{2: 257, 3: 257, 4: 260, 5: 257}\n",
       "총 문제수 일치 여부: True\n"
      ]
     }
    ],
    "source": [
+    "pick_right = [p for p in multiple if p['pick'] == 'right']\n",
+    "# print(len(pick_wrong))\n",
     "options_4 = []\n",
     "options_5 = []\n",
     "option_others = []\n",
@@ -177,6 +87,7 @@
     "    for i in range(len(options_4) % 3):\n",
     "        ans_num_4[3] += 1\n",
     "if len(options_5) % 4 != 0:\n",
+    "    for i in range(len(options_5) % 4):\n",
     "        ans_num_5[4] += 1\n",
     "\n",
     "\n",
@@ -190,22 +101,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f416334",
+   "execution_count": 7,
+   "id": "eceb7804",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print(len(option_others))\n",
-    "\n",
-    "# option_others"
+    "option_others"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8f48e199",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4지선다 남은 문제 수: 0\n",
+      "5지선다 남은 문제 수: 0\n",
+      "총 문제수 일치 여부: True\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "# random.seed(42)\n",
@@ -213,7 +143,7 @@
     "# 4지선다와 5지선다를 독립적으로 랜덤 샘플링\n",
     "remaining_4 = options_4.copy()\n",
     "remaining_5 = options_5.copy()\n",
-    "pick_wrong_sampling = {}\n",
+    "pick_right_sampling = {}\n",
     "\n",
     "for i in range(2, 6):\n",
     "    sampling_result = []\n",
@@ -232,14 +162,14 @@
     "        sampling_result.extend(sampled_5)\n",
     "        remaining_5 = [x for x in remaining_5 if x not in sampled_5]\n",
     "    \n",
-    "    pick_wrong_sampling[i] = sampling_result\n",
+    "    pick_right_sampling[i] = sampling_result\n",
     "    \n",
-    "    with open(f'/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/7_multiple_rw/pick_wrong/pick_wrong_sampling_{i}.json', 'w', encoding='utf-8') as f:\n",
-    "        json.dump(pick_wrong_sampling[i], f, ensure_ascii=False, indent=4)\n",
+    "    with open(os.path.join(ONEDRIVE_PATH, f'evaluation/eval_data/7_multiple_rw/pick_right/pick_right_sampling_{i}.json'), 'w', encoding='utf-8') as f:\n",
+    "        json.dump(pick_right_sampling[i], f, ensure_ascii=False, indent=4)\n",
     "\n",
     "print(\"4지선다 남은 문제 수:\", len(remaining_4))\n",
     "print(\"5지선다 남은 문제 수:\", len(remaining_5))\n",
-    "print(\"총 문제수 일치 여부:\", len(options_4) + len(options_5) == len(pick_wrong))"
+    "print(\"총 문제수 일치 여부:\", len(options_4) + len(options_5) == len(pick_right))"
    ]
   },
   {
@@ -279,7 +209,7 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "llm = LLMQuery()\n",
-    "output_dir = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/7_multiple_rw/pick_wrong'\n",
+    "output_dir = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/pick_right')\n",
     "\n",
     "logger.info(f\"로그 파일: {log_file}\")\n",
     "logger.info(\"=\" * 80)\n",
@@ -290,46 +220,46 @@
     "  not_parsed_responses = []\n",
     "  no_responses = []\n",
     "\n",
-    "  for idx, p in enumerate(pick_wrong_sampling[i], 1):\n",
+    "  for idx, p in enumerate(pick_right_sampling[i], 1):\n",
     "    question_id = p['file_id'] + '_' + p['tag']\n",
-    "    logger.info(f\"\\n[{i}개 그룹] {idx}/{len(pick_wrong_sampling[i])} - 문제 ID: {question_id} 처리 중...\")\n",
+    "    logger.info(f\"\\n[{i}개 그룹] {idx}/{len(pick_right_sampling[i])} - 문제 ID: {question_id} 처리 중...\")\n",
     "    options_ct = len(p['options'])\n",
     "\n",
     "    if options_ct - i == 1:\n",
-    "      # 오답이 1개여야 하는 경우\n",
+    "      # 옳은 답이 1개여야 하는 경우\n",
     "      system_prompt = f\"\"\"당신은 25년 경력의 문제 출제 전문가입니다.\n",
     "\n",
     "  변형 규칙\n",
-    "  1) 주어진 답(원래의 ‘옳지 않은’ 선택지)은 그대로 유지합니다.\n",
-    "  3) 문제 지문을 ‘옳은 것을 모두 고르시오’로 명확히 바꿉니다. 그 외 문장과 LaTeX 수식이나 테이블 표현은 원형을 최대한 보존합니다.\n",
-    "  4) 새로운 정답은 변형 후 ‘옳은’ 선택지 전부입니다(총 선택지 수가 {options_ct}개라면 {i}개).\n",
+    "  1) 주어진 답(원래의 ‘옳은’ 선택지)은 그대로 유지합니다.\n",
+    "  3) 문제 지문을 ‘옳지 않은 것을 모두 고르시오’로 명확히 바꿉니다. 그 외 문장과 LaTeX 수식이나 테이블 표현은 원형을 최대한 보존합니다.\n",
+    "  4) 새로운 정답은 변형 후 ‘옳지 않은’ 선택지 전부입니다(총 선택지 수가 {options_ct}개라면 {i}개).\n",
     "\n",
     "  출력 형식\n",
     "  {{\n",
     "    \"question_id\": \"문제번호\",\n",
-    "    \"question\": \"변형된 문제(옳은 것을 모두 고르시오)\",\n",
+    "    \"question\": \"변형된 문제(옳지 않은 것을 모두 고르시오)\",\n",
     "    \"options\": [\"① 선택지1\", \"② 선택지2\", \"③ 선택지3\", \"④ 선택지4\", \"⑤ 선택지5\"],\n",
     "    \"answer\": [\"정답번호1\", \"정답번호2\", ...], \n",
-    "    \"explanation\": \"① 옳다: 근거 ... / ③ 옳지 않다(원래 오답): 근거 ... / ⑤ 옳지 않다(변형): 변경 단어 ‘높다→낮다’, 근거 ...\"\n",
+    "    \"explanation\": \"① 옳지 않다: 근거 ... / ③ 옳다(원래 답): 근거 ... / ⑤ 옳지 않다: 근거 ...\"\n",
     "  }}\"\"\"\n",
     "      \n",
     "    elif options_ct - i == 0:\n",
-    "      # 오답이 0개여야 하는 경우\n",
+    "      # 옳은 답이 0개여야 하는 경우\n",
     "      system_prompt = f\"\"\"당신은 25년 경력의 문제 출제 전문가입니다.\n",
     "\n",
     "  변형 규칙\n",
-    "  1) 주어진 답(원래의 ‘옳지 않은’ 선택지)을 단어 1~2개 수준의 최소 변경으로 ‘옳은’ 선택지로 만듭니다. (ex. 높다 -> 낮다, 한다 -> 하지 않는다)\n",
-    "  2) 문제 지문을 ‘옳은 것을 모두 고르시오’로 명확히 바꿉니다. 그 외 문장과 LaTeX 수식이나 테이블 표현 원형을 최대한 보존합니다.\n",
-    "  3) 새로운 정답은 변형 후 ‘옳은’ 선택지 전부입니다(총 선택지 수가 {options_ct}개라면 {i}개).\n",
+    "  1) 주어진 답(원래의 ‘옳은’ 선택지)을 단어 1~2개 수준의 최소 변경으로 ‘옳지 않은’ 선택지로 만듭니다. (ex. 높다 -> 낮다, 한다 -> 하지 않는다)\n",
+    "  2) 문제 지문을 ‘옳지 않은 것을 모두 고르시오’로 명확히 바꿉니다. 그 외 문장과 LaTeX 수식이나 테이블 표현 원형을 최대한 보존합니다.\n",
+    "  3) 새로운 정답은 변형 후 ‘옳지 않은’ 선택지 전부입니다(총 선택지 수가 {options_ct}개라면 {i}개).\n",
     "  4) 해설에는 각 선택지의 옳고 그름과 간단한 근거를 명시하세요. 특히 새로 만든 정답 1개의 변경 포인트를 밝혀주세요.\n",
     "\n",
     "  출력 형식\n",
     "  {{\n",
     "    \"question_id\": \"문제번호\",\n",
-    "    \"question\": \"변형된 문제(옳은 것을 모두 고르시오)\",\n",
+    "    \"question\": \"변형된 문제(옳지 않은 것을 모두 고르시오)\",\n",
     "    \"options\": [\"① 선택지1\", \"② 선택지2\", \"③ 선택지3\", \"④ 선택지4\", \"⑤ 선택지5\"],\n",
     "    \"answer\": [\"정답번호1\", \"정답번호2\", ...], \n",
-    "    \"explanation\": \"① 옳다: 근거 ... / ③ 옳지 않다(원래 오답): 근거 ... / ⑤ 옳지 않다(변형): 변경 단어 ‘높다→낮다’, 근거 ...\"\n",
+    "    \"explanation\": \"① 옳지 않다: 근거 ... / ③ 옳지 않다: 근거 ... / ⑤ 옳지 않다(원래 답): 변경 단어 ‘높다→낮다’, 근거 ...\"\n",
     "  }}\n",
     "\n",
     "  비고\n",
@@ -337,14 +267,14 @@
     "  - 사실과 상충하는 임의 창작을 피하고, 제공된 해설의 논리 범위 내에서만 최소 변경을 수행하세요.\"\"\"\n",
     "          \n",
     "    else:\n",
-    "      # 오답이 2개 이상인 경우\n",
+    "      # 옳은 답이 2개 이상인 경우\n",
     "      system_prompt = f\"\"\"당신은 25년 경력의 문제 출제 전문가입니다.\n",
     "\n",
     "  변형 규칙\n",
-    "  1) 주어진 답(원래의 ‘옳지 않은’ 선택지)은 그대로 유지합니다.\n",
+    "  1) 주어진 답(원래의 ‘옳은’ 선택지)은 그대로 유지합니다.\n",
     "  2) 나머지 선택지 중에서 정확히 {options_ct-i-1}개를 골라, 단어 1~2개 수준의 최소 변경으로 ‘옳지 않은’ 선택지로 만듭니다. (ex. 높다 -> 낮다, 한다 -> 하지 않는다)\n",
-    "  3) 문제 지문을 ‘옳은 것을 모두 고르시오’로 명확히 바꿉니다. 그 외 문장과 LaTeX 수식이나 테이블 표현 원형을 최대한 보존합니다.\n",
-    "  4) 새로운 정답은 변형 후 ‘옳은’ 선택지 전부입니다(총 선택지 수가 {options_ct}개라면 {i}개).\n",
+    "  3) 문제 지문을 ‘옳지 않은 것을 모두 고르시오’로 명확히 바꿉니다. 그 외 문장과 LaTeX 수식이나 테이블 표현 원형을 최대한 보존합니다.\n",
+    "  4) 새로운 정답은 변형 후 ‘옳지 않은’ 선택지 전부입니다(총 선택지 수가 {options_ct}개라면 {i}개).\n",
     "  5) 해설에는 각 선택지의 옳고 그름과 간단한 근거를 명시하세요. 특히 새로 만든 오답 1개의 변경 포인트를 밝혀주세요.\n",
     "\n",
     "  출력 형식\n",
@@ -353,7 +283,7 @@
     "    \"question\": \"변형된 문제(옳은 것을 모두 고르시오)\",\n",
     "    \"options\": [\"① 선택지1\", \"② 선택지2\", \"③ 선택지3\", \"④ 선택지4\", \"⑤ 선택지5\"],\n",
     "    \"answer\": [\"정답번호1\", \"정답번호2\", ...], \n",
-    "    \"explanation\": \"① 옳다: 근거 ... / ③ 옳지 않다(원래 오답): 근거 ... / ⑤ 옳지 않다(변형): 변경 단어 ‘높다→낮다’, 근거 ...\"\n",
+    "    \"explanation\": \"① 옳지 않다: 근거 ... / ③ 옳다(원래 답): 근거 ... / ⑤ 옳다(변형): 변경 단어 ‘높다→낮다’, 근거 ...\"\n",
     "  }}\n",
     "\n",
     "  비고\n",
@@ -505,7 +435,7 @@
     "        json.dump(existing_no_responses, f, ensure_ascii=False, indent=4)\n",
     "      logger.warning(f\"  ✓ 저장 완료 (총 {len(existing_no_responses)}개 응답 없음 누적)\")\n",
     "    \n",
-    "    logger.info(f\"  [{i}개 그룹] {idx}/{len(pick_wrong_sampling[i])} - 문제 ID: {question_id} 처리 완료\")\n",
+    "    logger.info(f\"  [{i}개 그룹] {idx}/{len(pick_right_sampling[i])} - 문제 ID: {question_id} 처리 완료\")\n",
     "    # break\n",
     "  \n",
     "  logger.info(f\"\\n[정답 {i}개 그룹] 처리 완료 - 성공: {len(parsed_responses)}, 파싱실패: {len(not_parsed_responses)}, 응답없음: {len(no_responses)}\")\n",
@@ -522,11 +452,19 @@
    "source": [
     "# 5문제: 1분 10초"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28146737",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "aic",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
